blackroad-sf/force-app/main/default/objects/AgentMemory__c/AgentMemory__c.object-meta.xml
<CustomObject>
    <label>Agent Memory</label>
    <pluralLabel>Agent Memories</pluralLabel>
    <nameField>
        <label>Memory Key</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>PS-SHA∞ memory journal entries. Persistent, verifiable agent memory stored in Salesforce — $0.</description>
</CustomObject>