blackroad-sf/force-app/main/default/objects/AgentMemory__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <label>Agent</label>
    <type>Lookup</type>
        <referenceTo>Agent__c</referenceTo>
        <relationshipName>Memories</relationshipName>
    
</CustomField>