blackroad-sf/force-app/main/default/objects/AgentMemory__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <label>Content</label>
    <type>LongTextArea</type>
        <length>32768</length>
    
</CustomField>