blackroad-sf/force-app/main/default/objects/AgentMemory__c/fields/MemoryHash__c.field-meta.xml
<CustomField>
    <fullName>MemoryHash__c</fullName>
    <label>PS-SHA∞ Hash</label>
    <type>Text</type>
        <length>64</length>
    <required>true</required>
    
</CustomField>