blackroad-sf/force-app/main/default/objects/AgentMemory__c/fields/MemoryType__c.field-meta.xml
<CustomField>
    <fullName>MemoryType__c</fullName>
    <label>Memory Type</label>
    <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
            <value>
                <fullName>fact</fullName>
                <default>true</default>
                <label>fact</label>
            </value>
            <value>
                <fullName>observation</fullName>
            </value>
            <value>
                <fullName>inference</fullName>
            </value>
            <value>
                <fullName>commitment</fullName>
            </value>
            <value>
                <fullName>experience</fullName>
            </value>
            <value>
                <fullName>episodic</fullName>
            </value>
            <value>
                <fullName>semantic</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
    
</CustomField>