blackroad-sf/force-app/main/default/objects/AgentMemory__c/fields/PrevHash__c.field-meta.xml
<CustomField>
    <fullName>PrevHash__c</fullName>
    <label>Previous Hash</label>
    <type>Text</type>
        <length>64</length>
    
</CustomField>