blackroad-sf/force-app/main/default/objects/AgentMemory__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <label>Session ID</label>
    <type>Text</type>
        <length>100</length>
    
</CustomField>