blackroad-sf/force-app/main/default/objects/AgentMemory__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <type>Text</type>
        <length>255</length>
    
</CustomField>