blackroad-sf/force-app/main/default/objects/AgentMemory__c/fields/TruthState__c.field-meta.xml
<CustomField>
    <fullName>TruthState__c</fullName>
    <label>Truth State</label>
    <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
            <value>
                <fullName>1 (True)</fullName>
                <default>true</default>
                <label>1 (True)</label>
            </value>
            <value>
                <fullName>0 (Unknown)</fullName>
            </value>
            <value>
                <fullName>-1 (False)</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
    
</CustomField>